[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "sglang"
version = "999.1.15+dev20240528171304"
description = "A structured generation langauge for LLMs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License",]
dependencies = [ "requests", "tqdm",]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
srt = [ "aiohttp", "fastapi", "psutil", "rpyc", "torch", "uvloop", "uvicorn", "zmq", "vllm==0.4.2", "interegular", "pydantic", "pillow", "outlines>=0.0.34",]
openai = [ "openai>=1.0", "numpy", "tiktoken",]
anthropic = [ "anthropic>=0.20.0", "numpy",]
all = [ "sglang[srt]", "sglang[openai]", "sglang[anthropic]",]

[project.urls]
Homepage = "https://github.com/sgl-project/sglang"
"Bug Tracker" = "https://github.com/sgl-project/sglang/issues"

[tool.wheel]
exclude = [ "assets*", "benchmark*", "docs*", "dist*", "playground*", "scripts*", "tests*",]

[tool.setuptools.packages.find]
exclude = [ "assets*", "benchmark*", "docs*", "dist*", "playground*", "scripts*", "tests*",]
